--- a/upload-image/css/style.css
+++ b/upload-image/css/style.css
@@ -15,6 +15,7 @@ img {
   justify-content: center;
   width: 400px;
   height: 400px;
+  min-height: 50px;
   background-color: #ccc;
   color: #aaa;
   border: 1px solid;
